--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: install_deps
-      run: sudo apt install libeigen3-dev libgoogle-glog-dev libopencv-dev
+      run: sudo apt install libeigen3-dev libgoogle-glog-dev libopencv-dev libpcl-dev python3 python3-dev python3-pip
+    - name: pip3 install matplotlib
+      run: pip3 install matplotlib
     - name: build
       run: mkdir build
     - name: cmake only cpp test
