--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ endif()
 option(ONLY_CPP_TEST "Only Cpp test" OFF)
 if(ONLY_CPP_TEST)
   message(STATUS "Only Cpp test is ON")
+  add_subdirectory(algorithm)
   add_subdirectory(cpp_test)
 else()
   add_subdirectory(algorithm)
