--- a/lidar_2d/CMakeLists.txt
+++ b/lidar_2d/CMakeLists.txt
@@ -10,16 +10,12 @@ set(Sophus_DIR /home/V01/uids0025/src/Sophus/build)
 
 find_package(Sophus REQUIRED)
 include_directories(${Sophus_INCLUDE_DIRS})
+message(STATUS "Sophus_INCLUDE_DIRS was: ${Sophus_INCLUDE_DIRS}")
+message(STATUS "Sophus_LIBRARIES was: ${Sophus_LIBRARIES}")
 
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
-
-set(Sophus_DIR /home/V01/uids0025/src/Sophus/build)
-# set(Sophus_DIR /home/bot/src/Sophus/build) # 改为自己的安装路径
-
-find_package(Sophus REQUIRED)
-include_directories(${Sophus_INCLUDE_DIRS})
 
 include_directories(${EIGEN3_INCLUDE_DIRS})
 include_directories(${OpenCV_INCLUDE_DIRS})
