--- a/imu_and_gnss/CMakeLists.txt
+++ b/imu_and_gnss/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cc include/*.h)
 
 find_package(glog 0.6.0 REQUIRED)
-
+find_package(PCL 1.10 REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(OpenCV REQUIRED)
 
@@ -10,6 +10,19 @@ set(Sophus_DIR /home/V01/uids0025/src/Sophus/build)
 
 find_package(Sophus REQUIRED)
 include_directories(${Sophus_INCLUDE_DIRS})
+
+# g2o
+list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/imu_and_gnss/cmake_modules)
+SET(G2O_ROOT /usr/local/include/g2o)
+find_package(G2O REQUIRED)
+include_directories (${G2O_INCLUDE_DIRS})
+# g2o
+
+#PCL
+include_directories(${PCL_INCLUDE_DIRS})
+link_directories(${PCL_LIBRARY_DIRS})
+add_definitions(${PCL_DEFINITIONS})
+#PCL
 
 include_directories(${EIGEN3_INCLUDE_DIRS})
 include_directories(${OpenCV_INCLUDE_DIRS})
@@ -54,9 +67,14 @@ target_link_libraries(gnss_data_test gnss glog::glog imu)
 add_executable(run_eskf_gins test/run_eskf_gins.cc)
 target_link_libraries(run_eskf_gins eskf)
 
+# based on imu preintegration gins
+add_library(based_imu_pre_integration_gins STATIC src/based_imu_pre_integration_gins.cc)
+target_include_directories(based_imu_pre_integration_gins PUBLIC include)
+target_link_libraries(based_imu_pre_integration_gins imu_preintegration ${G2O_CORE_LIBRARY} ${G2O_STUFF_LIBRARY})
+
 # gtest example
 add_executable(gtest_preintegration test/gtest_preintegration.cc)
-target_link_libraries(gtest_preintegration gtest pthread glog gflags imu_preintegration)
+target_link_libraries(gtest_preintegration gtest pthread glog gflags imu_preintegration ${G2O_CORE_LIBRARY} ${G2O_STUFF_LIBRARY})
 
 # INSTALL
 install(
