add vslam with isam test

--- a/gtsam_test/CMakeLists.txt
+++ b/gtsam_test/CMakeLists.txt
@@ -3,6 +3,7 @@ file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cc include/*.h)
 find_package( GTSAM REQUIRED )
 
 include_directories( ${GTSAM_INCLUDE_DIR} )
+include_directories(include)
 set(GTSAM_LIBRARIES gtsam)   # TODO: automatic search libs
 
 add_executable(localization_example test/localization_example.cc)
@@ -15,4 +16,6 @@ target_link_libraries(pose2_slam_example ${GTSAM_LIBRARIES})
 add_executable(planar_slam_example test/planar_slam_example.cc)
 target_link_libraries(planar_slam_example ${GTSAM_LIBRARIES})
 
-# vSFMexample
+# vSFMexample with isam
+add_executable(v_slam_with_isam_example test/v_slam_with_isam_example.cc)
+target_link_libraries(v_slam_with_isam_example ${GTSAM_LIBRARIES})
