update lidar 2d mapping_2d, submap, mapping_2d_test

--- a/lidar_2d/CMakeLists.txt
+++ b/lidar_2d/CMakeLists.txt
@@ -51,12 +51,22 @@ add_library(occupancy_map_2d STATIC src/occupancy_map.cc)
 target_include_directories(occupancy_map_2d PUBLIC include)
 target_link_libraries(occupancy_map_2d ${PCL_LIBRARIES} ${OpenCV_LIBS} ${Sophus_LIBRARIES} ${catkin_LIBRARIES} glog::glog gflags)
 
+add_library(submap_2d STATIC src/submap.cc)
+target_include_directories(submap_2d PUBLIC include)
+target_link_libraries(submap_2d likelihood_field occupancy_map_2d ${PCL_LIBRARIES} ${OpenCV_LIBS} ${Sophus_LIBRARIES} ${catkin_LIBRARIES} glog::glog gflags)
+
+add_library(mapping_2d STATIC src/mapping_2d.cc)
+target_include_directories(mapping_2d PUBLIC include)
+target_link_libraries(mapping_2d likelihood_field occupancy_map_2d submap_2d lidar_2d_utils ${PCL_LIBRARIES} ${OpenCV_LIBS} ${Sophus_LIBRARIES} ${catkin_LIBRARIES} glog::glog gflags)
+
 add_executable(2dlidar_io_test test/2dlidar_io_test.cc)
 add_executable(2d_icp_s2s_test test/2d_icp_s2s_test.cc)
 add_executable(likelihood_field_icp_test test/likelihood_field_icp_test.cc)
 add_executable(occupancy_grid_test test/occupancy_grid_test.cc)
+add_executable(mapping_2d_test test/mapping_2d_test.cc)
 
 target_link_libraries(2dlidar_io_test lidar_2d_utils)
 target_link_libraries(2d_icp_s2s_test lidar_2d_utils lidar_2d_icp)
 target_link_libraries(likelihood_field_icp_test lidar_2d_utils likelihood_field)
 target_link_libraries(occupancy_grid_test lidar_2d_utils occupancy_map_2d)
+target_link_libraries(mapping_2d_test lidar_2d_utils mapping_2d)
