--- a/lidar_2d/CMakeLists.txt
+++ b/lidar_2d/CMakeLists.txt
@@ -70,11 +70,11 @@ add_executable(2d_icp_s2s_test test/2d_icp_s2s_test.cc)
 add_executable(likelihood_field_icp_test test/likelihood_field_icp_test.cc)
 add_executable(occupancy_grid_test test/occupancy_grid_test.cc)
 add_executable(mapping_2d_test test/mapping_2d_test.cc)
-add_executable(mr_likelihood_field_test test/mr_likelihood_field_test.cc)
+add_executable(mr_likelihood_field_test test/mr_likelihood_field_test.cc src/frame.cc)
 
 target_link_libraries(2dlidar_io_test lidar_2d_utils)
 target_link_libraries(2d_icp_s2s_test lidar_2d_utils lidar_2d_icp)
 target_link_libraries(likelihood_field_icp_test lidar_2d_utils likelihood_field)
 target_link_libraries(occupancy_grid_test lidar_2d_utils occupancy_map_2d)
 target_link_libraries(mapping_2d_test lidar_2d_utils mapping_2d)
-target_link_libraries(mr_likelihood_field_test lidar_2d_utils likelihood_field)
+target_link_libraries(mr_likelihood_field_test lidar_2d_utils multi_resolution_likelihood_field)
