--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ if(ROS_CATKIN)
   add_definitions(-DROS_CATKIN)
   include(cmake/find_ros.cmake)
   add_subdirectory(lidar_2d)
+  add_subdirectory(lidar_3d)
 endif()
 # =============== add ROS =====================
 
