update icp 3d test

--- a/lidar_3d/CMakeLists.txt
+++ b/lidar_3d/CMakeLists.txt
@@ -40,8 +40,12 @@ add_library(icp_3d STATIC src/icp_3d.cc ${PROJECT_SOURCE_DIR}/common/navigation_
 target_include_directories(icp_3d PUBLIC include)
 target_link_libraries(icp_3d ${PCL_LIBRARIES} ${OpenCV_LIBS} ${Sophus_LIBRARIES} ${catkin_LIBRARIES} pthread glog::glog gflags nearest_neighbour_search)
 
+add_library(ndt_3d STATIC src/ndt_3d.cc ${PROJECT_SOURCE_DIR}/common/navigation_and_mapping/io_utils.cc)
+target_include_directories(ndt_3d PUBLIC include)
+target_link_libraries(ndt_3d ${PCL_LIBRARIES} ${OpenCV_LIBS} ${Sophus_LIBRARIES} ${catkin_LIBRARIES} pthread glog::glog gflags nearest_neighbour_search)
+
 add_executable(icp_3d_test test/icp_3d_test.cc)
-target_link_libraries(icp_3d_test icp_3d)
+target_link_libraries(icp_3d_test icp_3d ndt_3d)
 
 add_executable(run_gen_simu_data test/run_gen_simu_data.cc src/gen_simu_data.cc)
 target_link_libraries(run_gen_simu_data icp_3d)
