--- a/lidar_3d/CMakeLists.txt
+++ b/lidar_3d/CMakeLists.txt
@@ -44,8 +44,16 @@ add_library(ndt_3d STATIC src/ndt_3d.cc ${PROJECT_SOURCE_DIR}/common/navigation_
 target_include_directories(ndt_3d PUBLIC include)
 target_link_libraries(ndt_3d ${PCL_LIBRARIES} ${OpenCV_LIBS} ${Sophus_LIBRARIES} ${catkin_LIBRARIES} pthread glog::glog gflags nearest_neighbour_search)
 
+add_library(direct_ndt_lo STATIC src/direct_ndt_lo.cc ${PROJECT_SOURCE_DIR}/common/navigation_and_mapping/io_utils.cc)
+target_include_directories(direct_ndt_lo PUBLIC include)
+target_link_libraries(direct_ndt_lo ndt_3d)
+
 add_executable(icp_3d_test test/icp_3d_test.cc)
 target_link_libraries(icp_3d_test icp_3d ndt_3d)
 
 add_executable(run_gen_simu_data test/run_gen_simu_data.cc src/gen_simu_data.cc)
 target_link_libraries(run_gen_simu_data icp_3d)
+
+
+add_executable(direct_ndt_lo_test test/direct_ndt_lo_test.cc)
+target_link_libraries(direct_ndt_lo_test direct_ndt_lo)
