--- a/lidar_3d/CMakeLists.txt
+++ b/lidar_3d/CMakeLists.txt
@@ -48,7 +48,7 @@ add_library(direct_ndt_lo STATIC src/direct_ndt_lo.cc ${PROJECT_SOURCE_DIR}/comm
 target_include_directories(direct_ndt_lo PUBLIC include)
 target_link_libraries(direct_ndt_lo ndt_3d)
 
-add_executable(icp_3d_test test/icp_3d_test.cc)
+add_executable(icp_3d_test test/icp_3d_test.cc ${PROJECT_SOURCE_DIR}/common/navigation_and_mapping/io_utils.cc ${PROJECT_SOURCE_DIR}/pcl_test/src/kd_tree.cc)
 target_link_libraries(icp_3d_test icp_3d ndt_3d)
 
 add_executable(run_gen_simu_data test/run_gen_simu_data.cc src/gen_simu_data.cc)
