--- a/algorithm/CMakeLists.txt
+++ b/algorithm/CMakeLists.txt
@@ -52,6 +52,7 @@ add_executable(least_square_polynomial_curve_fit_test test/least_square_polynomi
 add_executable(undistortion test/undistortion_test.cc)
 add_executable(tsai_lenz_eye_in_hand test/tsai_lenz_eye_in_hand.cc)
 add_executable(mahalanobis_distance_test test/mahalanobis_distance_test.cc)
+add_executable(cv_gl_projection_test test/cv_gl_projection_test.cc)
 
 target_link_libraries(cubic_spline_test algorithm glog::glog)
 target_link_libraries(dlt_camera_calibration_test algorithm glog::glog)
@@ -60,6 +61,7 @@ target_link_libraries(least_square_polynomial_curve_fit_test algorithm glog::glo
 target_link_libraries(undistortion algorithm glog::glog matplotlib_cpp)
 target_link_libraries(tsai_lenz_eye_in_hand algorithm glog::glog matplotlib_cpp)
 target_link_libraries(mahalanobis_distance_test algorithm glog::glog)
+target_link_libraries(cv_gl_projection_test algorithm)
 
 # INSTALL
 install(
