--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ if(ROS_CATKIN)
   message(STATUS "ros catkin was ON")
   add_definitions(-DROS_CATKIN)
   include(cmake/find_ros.cmake)
+  include(cmake/third_party.cmake)
   add_subdirectory(lidar_2d)
   add_subdirectory(lidar_3d)
 endif()
