--- a/lidar_3d/CMakeLists.txt
+++ b/lidar_3d/CMakeLists.txt
@@ -54,6 +54,10 @@ add_library(direct_ndt_lo STATIC src/direct_ndt_lo.cc ${PROJECT_SOURCE_DIR}/comm
 target_include_directories(direct_ndt_lo PUBLIC include)
 target_link_libraries(direct_ndt_lo ndt_3d)
 
+add_library(incremental_ndt_lo STATIC src/incremental_ndt_lo.cc src/incremental_ndt.cc ${PROJECT_SOURCE_DIR}/common/navigation_and_mapping/io_utils.cc)
+target_include_directories(incremental_ndt_lo PUBLIC include)
+target_link_libraries(incremental_ndt_lo ndt_3d)
+
 add_library(feature_extraction STATIC src/feature_extraction.cc)
 target_include_directories(feature_extraction PUBLIC include)
 target_link_libraries(feature_extraction ${PCL_LIBRARIES} glog::glog)
@@ -62,11 +66,12 @@ add_library(loam_like_odom STATIC src/loam_like_odom.cc)
 target_include_directories(loam_like_odom PUBLIC include)
 target_link_libraries(loam_like_odom feature_extraction icp_3d nearest_neighbour_search)
 
-add_library(loosely_lio STATIC 
+add_library(loosely_lio STATIC
+    loosely_coupled_lio/loosely_lio.cc
     loosely_coupled_lio/measure_sync.cc 
     loosely_coupled_lio/cloud_convert.cc)
 target_include_directories(loosely_lio PUBLIC include)
-target_link_libraries(loosely_lio ${PCL_LIBRARIES} ${OpenCV_LIBS} ${Sophus_LIBRARIES} ${catkin_LIBRARIES} glog::glog gflags)
+target_link_libraries(loosely_lio ${PCL_LIBRARIES} ${OpenCV_LIBS} ${Sophus_LIBRARIES} ${catkin_LIBRARIES} glog::glog gflags eskf imu incremental_ndt_lo)
 
 add_executable(icp_3d_test test/icp_3d_test.cc ${PROJECT_SOURCE_DIR}/common/navigation_and_mapping/io_utils.cc ${PROJECT_SOURCE_DIR}/pcl_test/src/kd_tree.cc)
 target_link_libraries(icp_3d_test icp_3d ndt_3d)
