--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: update
+      run: sudo apt update
     - name: install_deps
       run: sudo apt install libeigen3-dev libgoogle-glog-dev libopencv-dev libpcl-dev python3 python3-dev python3-pip
     - name: pip3 install matplotlib
