finish LK feature tracker

--- a/feature_tracker/CMakeLists.txt
+++ b/feature_tracker/CMakeLists.txt
@@ -23,7 +23,6 @@ link_directories(yaml-cpp)
 include_directories(${EIGEN3_INCLUDE_DIRS})
 include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(${PROJECT_SOURCE_DIR}/common)
-include_directories(${PROJECT_SOURCE_DIR}/algorithm/include)
 
 if(ROS_CATKIN)
 else()
@@ -31,12 +30,12 @@ message("lidar_3d module need `-DROS_CATKIN=ON` optional")
     return()
 endif()
 
-add_library(feature_tracker STATIC ${srcs})
+add_library(feature_tracker STATIC src/feature_tracker.cc)
 target_include_directories(feature_tracker PUBLIC include)
-target_link_libraries(feature_tracker ${OpenCV_LIBS} ${PCL_LIBRARIES} ${Sophus_LIBRARIES} ${catkin_LIBRARIES} glog::glog gflags yaml-cpp algorithm)
+target_link_libraries(feature_tracker ${OpenCV_LIBS} ${PCL_LIBRARIES} ${Sophus_LIBRARIES} ${catkin_LIBRARIES} glog::glog gflags yaml-cpp)
 
 add_executable(check_rosbag_images test/check_rosbag_images.cc ${PROJECT_SOURCE_DIR}/common/navigation_and_mapping/io_utils.cc)
-target_link_libraries(check_rosbag_images ${OpenCV_LIBS} ${PCL_LIBRARIES} ${Sophus_LIBRARIES} ${catkin_LIBRARIES} glog::glog gflags yaml-cpp algorithm)
+target_link_libraries(check_rosbag_images ${OpenCV_LIBS} ${PCL_LIBRARIES} ${Sophus_LIBRARIES} ${catkin_LIBRARIES} glog::glog gflags yaml-cpp feature_tracker)
 
 # INSTALL
 install(
