add share memory test

--- a/cpp_test/CMakeLists.txt
+++ b/cpp_test/CMakeLists.txt
@@ -10,6 +10,8 @@ add_executable(variadic_templates_test variadic_templates_test.cc)
 add_executable(left_value_right_value_test left_value_right_value_test.cc)
 add_executable(diy_smart_ptr_test diy_smart_ptr_test.cc diy_smart_ptr.hpp)
 add_executable(bind_function_test bind_function_test.cc)
+add_executable(write_shared_memory write_shared_memory.cc)
+add_executable(read_shared_memory read_shared_memory.cc)
 
 target_link_libraries(template_test glog::glog)
 
